feat: openapi.yml 에 스펙 정의
