# src/main/java/com/github/kellyihyeon/stanceadmin/presentation/accounttransaction/AccountTransactionController.java
@@ -2,10 +2,7 @@ package com.github.kellyihyeon.stanceadmin.presentation.accounttransaction;
 
 import com.github.kellyihyeon.stanceadmin.apis.AccountTransactionApi;
 import com.github.kellyihyeon.stanceadmin.application.accounttransaction.AccountTransactionQueryService;
-import com.github.kellyihyeon.stanceadmin.models.MonthlySummary;
-import com.github.kellyihyeon.stanceadmin.models.PagedAccountTransactionResponse;
-import com.github.kellyihyeon.stanceadmin.models.TopDeposits;
-import com.github.kellyihyeon.stanceadmin.models.TopExpenses;
+import com.github.kellyihyeon.stanceadmin.models.*;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.http.ResponseEntity;
@@ -41,4 +38,10 @@ public class AccountTransactionController implements AccountTransactionApi {
     public ResponseEntity<List<TopExpenses>> getTop3Expenses(Integer year, Integer month) {
         return null;
     }
+
+    @Override
+    public ResponseEntity<Void> recalculateBalanceFrom(TransactionIdRequest transactionIdRequest) {
+        return null;
+    }
+
 }
