# src/main/resources/openapi.yaml
@@ -214,6 +214,30 @@ paths:
         '500':
           description: Internal server error
 
+  /account-transactions/balance:
+    patch:
+      tags:
+        - account-transaction
+      summary: 모임통장 입출금 내역의 잔액을 재계산 합니다.
+      operationId: recalculateBalanceFrom
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/TransactionIdRequest'
+      responses:
+        '204':
+          description: Balance recalculated successfully.
+        '400':
+          description: Invalid input.
+        '401':
+          description: Unauthorized.
+        '404':
+          description: Transaction not found.
+        '500':
+          description: Server error.
+
   # 이벤트비 입금 내역
   /account-transactions/deposits/event-fee:
     post:
@@ -668,6 +692,16 @@ components:
       required:
         - content
         - paging
+
+    TransactionIdRequest:
+      type: object
+      properties:
+        fromTransactionId:
+          type: integer
+          format: int64
+          description: 재계산을 시작할 ID
+      required:
+        - fromTransactionId
 
     EventFeeDepositResponse:
       type: object
